<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bandFeed</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="log_out">Log out</string>
    <string name="about">About</string>
    <string name="next">Next</string>
    <string name="test">test</string>
    <string name="title_activity_step">Add your band</string>
    <string name="type">Type here..</string>
    <string name="band_feed_symbol_description">bandFeed image</string>

    <!-- activity_main -->
    <string name="title_activity_main">bandFeed</string>
    <string name="create_profile">Create a band profile</string>
    <string name="browse_bands">Browse bands</string>
    <string name="swipe">Swipe left to flick through your feeds.</string>

    <!-- activity_step_one -->
    <string name="band_name_text">Enter the name of your band</string>
    <string name="add_band_name_hint">Type band name..</string>
    <string name="genre_text">Select 3 genres that best describe your band"\n""\n"1st genre</string>
    <string name="select_prompt">Select..</string>
    <string name="genre2_text">2nd genre</string>
    <string name="genre3_text">3rd genre</string>

    <!-- activity_step_two -->
    <string name="amount_of_members_text">How many members are in your band?</string>
    <string name="amount_of_members_hint">Type amount of members..</string>
    <string name="where_text">Which county is your band based in? Bands must come from the UK!</string>
    <string name="town_text">Which town is your band based in?</string>
    <string name="town_hint">Type town..</string>

    <!-- activity_step_four -->
    <string name="webpage_text">Enter your website address"\n"(if you have one)</string>
    <string name="webpage_hint">Type website url..</string>
    <string name="logo_text">Click to select a band logo or photo for your band</string>
    <string name="soundCloud_text">Enter a webpage that contains samples of your music e.g. your SoundCloud page"\n"(if you have one)</string>
    <string name="soundCloud_hint">Type samples url..</string>
    <string name="you_are_text">Which member of the band is you?</string>

    <!-- activity_about -->
    <string name="title_activity_about">About bandFeed</string>
    <string name="about_text">Author: Brett Flitter"\n"Version: Prototype 1 &#8211; 20/02/2013"\n"Title: Project bandFeed</string>
    <string name="instructions_text">"\n"Welcome to bandFeed!"\n"
	bandFeed is a final year computer science project developed by Brett Flitter. It is still very much in prototype form and will be buggy!"\n""\n"
	The purpose of this project is to create a publish/subscribe Android App which allows users to selectively subscribe to UK based bands’ news and messages. Using an AMQP message broker, bands are able to send messages out to their subscribers in an asynchronous manner. There is no two-way conversation functionality in this App, you should address all the people who wish to hear what your band has got to say."\n""\n"
	Feel free to create real or example/test/fake band profiles to discover the app’s full functionality."\n""\n"
	Some instructions/explainations you might need along the way:"\n""\n"
	Users can be linked to many bands. If you’re a member of an existing profile, LONG PRESS over the member section of a profile to send a link request!"\n""\n"
	All members of a band can send out messages to their followers providing they’re linked to the band profile. The option to send messages will appear once you’ve had your link request accepted."\n""\n"
	Profiles can be edited or deleted, just LONG PRESS on any of the sections on your band profile."\n""\n"
	A small amount of messages and images are cached to your phone to enable faster browsing speeds when reading through your feeds."\n""\n"</string>

    <!-- activity_browse -->
    <string name="title_activity_search">Search</string>
    <string name="genre_search_hint">Type genre..</string>
    <string name="genre_search_completion_hint">Select a genre..</string>
    <string name="search_for_bands">Enter one or more search criteria"\n"(You may leave fields blank)</string>
    <string name="search_band_name_text">Search by band name</string>
    <string name="search_genre_text">Search by genre</string>
    <string name="band_name_hint">Type band name..</string>
    <string name="search">Search</string>
    <string name="title_activity_search_results">Search Results</string>

    <!-- activity_send_messagest -->
    <string name="title_activity_send_messages">Send a message</string>
    <string name="send_message_text">Send a message to your subscribers</string>
    <string name="send_message_hint">Type message..</string>
    <string name="send_test_message">Send</string>
    <string name="send_from_text">Message to be sent from which band?</string>
    <string name="select_topic_text">Select the topic type of your message</string>

    <!-- activity_receive_messages -->
    <string name="title_activity_receive_messages">Receive messages</string>
    <string name="receive_test_message">Receive</string>

    <!-- activity_signup -->
    <string name="title_activity_signup">Create a user account</string>
    <string name="username_text">*** DISCLAIMER - Any data submitted cannot be gauaranteed safety. You should choose a unique password different from any other services you may use. ***"\n""\n"Please create a username for yourself</string>
    <string name="password_text">Please create a password</string>
    <string name="add_username_hint">Type username..</string>
    <string name="add_password_hint">Type password..</string>
    <string name="sign_genre_text">Enter up to 3 of your favourite music genres. These will be used to make band recommendations based on what you like."\n""\n"1st genre</string>

    <!-- activity_display_profile -->
    <string name="title_activity_display_profile">Profile</string>
    <string name="profile_subscriptions_button">Subscriptions</string>

    <!-- activity_login -->
    <string name="title_activity_login">Login</string>
    <string name="username_login_text">Please enter your username</string>
    <string name="password_login_text">Please enter your password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>

    <!-- update -->
    <string name="title_activity_update_biography">Update Biography</string>
    <string name="update_profile_button">Update</string>
    <string name="cancel_profile_button">Cancel</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_update_samples">Update Samples</string>
    <string name="title_activity_update_webpage">Update Webpage</string>

    <!-- activity_subscribe -->
    <string name="title_activity_subscribe">Subscribe</string>
    <string name="check_news">General News</string>
    <string name="check_gigs">Gigs</string>
    <string name="check_releases">Music Releases</string>
    <string name="check_updates">Profile Updates</string>
    <string name="subscribe">Subscribe</string>
    <string name="cancel">Cancel</string>

    <!-- activity_send_feedback -->
    <string name="title_activity_send_feedback">SendFeedback</string>
    <string name="send_feedback_text">All constructive feedback will be greatly apprieciated and will help me to produce a better app. Please use this service to also submit any bugs you may come across.</string>
    <string name="submit_button">Submit</string>
    <string name="send_device_text">Please state the device you\'re using e.g \'Samsung Galaxy S3\'.</string>
    <string name="send_version_text">Please state the version of Android you\'re running e.g. \'4.0.3\'. \n If you are not sure you can find the android version located in \'Settings\' > \'About phone\' > \'Android version\'.</string>
    <string name="select_page_text">If the comment you wish to make was in releation to the page in which you pressed the \'Send Feedback\' icon (the previous page), please tick the following box, otherwise just leave it blank.</string>
    <string name="check_page">Yes the comment is releated to the previous page.</string>

    <!-- Feeds -->
    <string name="title_activity_all_feed">All Feed</string>
    <string name="title_activity_news_feed">General News Feed</string>
    <string name="title_activity_gigs_feed">Gigs Feed</string>
    <string name="title_activity_releases_feed">Releases Feed</string>
    <string name="title_activity_updates_feed">Updates Feed</string>

    <!-- activity_request_link -->
    <string name="title_activity_request_link">Request Link</string>
    <string name="link_name_button">Send link</string>

    <!-- activity_deal_with_link_request -->
    <string name="title_activity_deal_with_link_request">Accept Link Request?</string>
    <string name="accept_button">Accept</string>

    <!-- activity_update_members -->
    <string name="title_activity_update_members">Update Members</string>
    <string name="add_button">Add a new Member</string>
    <string name="delete_button">Delete a Member</string>
    <string name="cancel_members_button">Cancel</string>
    <string name="update_members_textview">Select a member to delete..</string>
    <string name="or_add">or add a new member..</string>
    <string name="type_name">Type name..</string>
    <string name="type_role">Type role..</string>
    <string name="text_name_update">Enter the name of band member</string>
    <string name="text_role_update">Enter the role(s) of member e.g. Bassist, Vocalist</string>
    <string name="check_member">Is this member you?</string>

</resources>