<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dip" >

        <TextView
            android:id="@+id/update_members_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_members_textview"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/update_members_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_prompt" />

        <Button
            android:id="@+id/delete_member_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_button" />

        <TextView
            android:id="@+id/or_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="40dp"
            android:text="@string/or_add"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name_update" />

        <EditText
            android:id="@+id/update_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_name" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_role_update" />

        <EditText
            android:id="@+id/update_role"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_role" />

        <CheckBox
            android:id="@+id/checkMember"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:button="@null"
            android:drawableRight="@drawable/box"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:text="@string/check_member" />

        <Button
            android:id="@+id/add_member_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_button" />

        <TextView
            android:id="@id/spacing"
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/cancel_update_member_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel_members_button" />
    </LinearLayout>

</ScrollView>