<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dip" >

        <TextView
            android:id="@+id/send_message_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_message_text" />

        <EditText
            android:id="@+id/send_message_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/send_message_hint"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine|textAutoComplete"
            android:minHeight="40dip" />

        <TextView
            android:id="@+id/send_from_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_from_text" />

        <Spinner
            android:id="@+id/from_who_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_prompt" />

        <Button
            android:id="@+id/send_test_message_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/send_test_message" />
    </LinearLayout>

</ScrollView>