<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dip" >

        <TextView
            android:id="@+id/username_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_text" />

        <EditText
            android:id="@+id/add_username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_username_hint" />

        <TextView
            android:id="@+id/password_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/add_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_password_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/password2_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/add_password2_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_password_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@id/username_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:textIsSelectable="false" />
               
        <TextView
            android:id="@+id/genre_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_genre_text" />

         <AutoCompleteTextView
            android:id="@+id/first_genre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:completionHint="@string/genre_search_completion_hint"
            android:completionThreshold="1"
            android:dropDownHeight="250dp"
            android:dropDownWidth="wrap_content"
            android:hint="@string/genre_search_hint"
            android:inputType="textAutoComplete" />

        <TextView
            android:id="@+id/genre2_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre2_text" />

         <AutoCompleteTextView
            android:id="@+id/second_genre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:completionHint="@string/genre_search_completion_hint"
            android:completionThreshold="1"
            android:dropDownHeight="250dp"
            android:dropDownWidth="wrap_content"
            android:hint="@string/genre_search_hint"
            android:inputType="textAutoComplete" />

        <TextView
            android:id="@+id/genre3_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre3_text" />

         <AutoCompleteTextView
            android:id="@+id/third_genre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:completionHint="@string/genre_search_completion_hint"
            android:completionThreshold="1"
            android:dropDownHeight="250dp"
            android:dropDownWidth="wrap_content"
            android:hint="@string/genre_search_hint"
            android:inputType="textAutoComplete" />

        <TextView
            android:id="@id/genre_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:textIsSelectable="false" />
        
        <Button
            android:id="@+id/username_next_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next" />
    </LinearLayout>

</ScrollView>