<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip"
    android:orientation="vertical" >
    	
    <TextView
        android:id="@+id/send_message_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message_text" />

    <EditText 
        android:id="@+id/send_message_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/send_message_hint" />
    
    <TextView
        android:id="@+id/send_from_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_from_text" />

    <EditText 
        android:id="@+id/send_from_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/send_from_hint" />
    
    <Button
        android:id="@+id/send_test_message_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_test_message" />
    
        
</LinearLayout>