<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dip" >

        <TextView
            android:id="@+id/username_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_text" />

        <EditText
            android:id="@+id/add_username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_username_hint" />

        <TextView
            android:id="@+id/password_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/add_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_password_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/password2_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/add_password2_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_password_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@id/username_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip" />

        <Button
            android:id="@+id/username_next_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next" />
    </LinearLayout>

</ScrollView>